--- a/_posts/2020-09-20-semanas-1-3.markdown
+++ b/_posts/2020-09-20-semanas-1-3.markdown
@@ -5,4 +5,7 @@ date: 2020-09-20 01:03:20 +0300
 description: # Add post description (optional)
 img: semana1.jpg # Add image post (optional)
 ---
-Este blog servirá como um diário do que está sendo feito relacionado à disciplina ACH2018.
+As primeiras semanas foram dedicadas aos seguintes pontos:
+- Conversas iniciais com o professor para orientação dos possíveis temas;
+- Leitura dos textos indicados sobre o tema;
+- Elaboração e entraga do cronograma;
