Post da semana 5 incompleto.

--- a/_posts/2020-09-20-semanas-1-3.markdown
+++ b/_posts/2020-09-20-semanas-1-3.markdown
@@ -12,5 +12,5 @@ Semana 3: 31/08 - 07/09
 
 As primeiras semanas foram dedicadas aos seguintes pontos:
 - Conversas iniciais com o professor para orientação dos possíveis temas;
-- Leitura dos textos indicados sobre o tema;
-- Desenvolvimento e entraga do cronograma no dia 07/09.
+- Leitura dos textos indicados sobre o assunto;
+- Desenvolvimento e entrega do cronograma no dia 07/09.
