--- a/_posts/2020-09-20-semanas-5.markdown
+++ b/_posts/2020-09-20-semanas-5.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "[ACH2018] Semana 5"
 date: 2020-09-20 12:05:20 +0300
 description: # Add post description (optional)
-img: google-apis.jpg # Add image post (optional)
+img: google_api.png # Add image post (optional)
 ---
 Semana 5: 14/09 - 21/09 
 
